# PortalTaller

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  cliente  minimal.supp  portal_client  portal_server  server-mock
assets/: escenario.yaml
deprecated/OLD_server/: main.cpp
deprecated/OLD_server/entidades/: colisionable.cpp  disparo_portal.cpp  disparo_portal.h  jugador.cpp  jugador.h
deprecated/OLD_server/fisicas/: direccion.h  fisicas.cpp  fisicas.h  posicion.h
deprecated/OLD_server/fisicas/formas/: forma.h  forma_bloque.cpp  forma_bloque.h  forma_bola_energia.cpp  forma_bola_energia.h  forma_boton.cpp  forma_boton.h  forma_disparo_pin.h  forma_disparo_portal.cpp  forma_disparo_portal.h  forma_jugador.h  forma_roca.cpp
deprecated/OLD_server/fisicas/transformaciones/: agregar_bloque_metal_cuadrado.cpp  agregar_bloque_metal_cuadrado.h  agregar_entidad.h  destruir_entidad.cpp  destruir_entidad.h  transformacion.cpp
deprecated/OLD_server/terrenos/: bloque_metal_cuadrado.cpp  bloque_metal_cuadrado.h  portal.h  portal_destino.h  terreno.cpp  terreno.h
deprecated/mundo/: identificable.h  mundo.cpp  mundo.h
deprecated/mundo/entidades/: entidad.cpp  entidad.h
deprecated/mundo/fisicas/: contactos.cpp  fisicas.cpp
deprecated/mundo/fisicas/formas/: forma.cpp  forma.h
deprecated/mundo/fisicas/movimiento/: direccion.cpp  posicion.cpp
deprecated/mundo/fisicas/transformaciones/: agregar_entidad.cpp  transformacion.h
deprecated/mundo/superficies/: bloque.cpp  bloque.h  superficie.cpp  superficie.h  superficie_metal.cpp  superficie_metal.h
deprecated/red_deprecated/: coordinador_partidas.cpp  partida.cpp  sala_de_espera.h
deprecated/server_deprecated/: server_config.h
deprecated/server_deprecated/entidades/: bola_energia.h  colisionable.h  entidad.cpp  entidad.h  identificable.cpp  identificable.h
deprecated/server_deprecated/fisicas/: direccion.cpp  fisicas.cpp  fisicas.h  posicion.cpp
deprecated/server_deprecated/fisicas/formas/: forma.cpp  forma_bloque.cpp  forma_disparo_pin.cpp  forma_jugador.cpp  forma_portal.cpp  forma_portal.h  forma_roca.h  forma_triangulo.cpp  forma_triangulo.h
deprecated/server_deprecated/fisicas/transformaciones/: agregar_entidad.cpp  agregar_terreno.cpp  agregar_terreno.h  teletransportar_entidad.cpp  teletransportar_entidad.h  transformacion.h
deprecated/server_deprecated/mundo/: mundo.cpp  mundo.h
deprecated/server_deprecated/terrenos/: bloque_metal_cuadrado.cpp  bloque_metal_cuadrado.h  bloque_piedra.cpp  portal.cpp  portal_destino.cpp  portal_nulo.cpp  portal_nulo.h  terreno.cpp  terreno.h
src/Cliente/: AnimacionPersonaje.cpp  AnimacionPersonaje.h  Area.cpp  Audio.cpp  Audio.h  Conversor.cpp  Conversor.h  CreadorTexturas.cpp  CreadorTexturas.h  EnviadorEventos.cpp  EnviadorEventos.h  Escena.cpp  Escena.h  EscenaBase.h  EscenaJuego.cpp  EscenaJuego.h  EscenaSala.cpp  EscenaSala.h  EventHandler.cpp  EventHandler.h  InputHandler.cpp  InputHandler.h  InputHandlerPrueba.cpp  InputHandlerPrueba.h  Menu.cpp  Menu.h  RecibidorEventos.cpp  RecibidorEventos.h  SdlTexture.cpp  SdlTexture.h  SdlTextureTexto.cpp  SdlTextureTexto.h  SdlWindow.cpp  SdlWindow.h  SeleccionadorEscena.cpp  SeleccionadorEscena.h  Terreno.cpp  Terreno.h  Texto.cpp  Texto.h  (+44 more)
src/Common/: Cola.cpp  Cola.h  Constantes.h  Conversor.cpp  Conversor.h  Evento.cpp  Evento.h  EventoPortalAzul.cpp  EventoPortalAzul.h  Lock.cpp  Lock.h  Serializador.cpp  Serializador.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  cola_bloqueante.cpp  cola_bloqueante.h  handler.h  serverMock.cpp  value_protected.cpp  value_protected.h
src/Editor/: editor.files  editor.includes
src/server/: server.cpp  server.h  serverMock.cpp  server_config.cpp  server_config.h  server_main.cpp
src/server/mundo/: colisionable.cpp  colisionable.h  identificable.cpp  identificable.h  mundo.cpp  mundo.h
src/server/mundo/entidades/: jugador.cpp  jugador.h
src/server/mundo/fisicas/: contactos.h  fisicas.cpp  fisicas.h
src/server/mundo/fisicas/formas/: forma.cpp  forma.h
src/server/mundo/fisicas/movimiento/: direccion.cpp  direccion.h  posicion.h  rotacion.cpp  rotacion.h  velocidad.cpp  velocidad.h
src/server/mundo/fisicas/transformaciones/: agregar_entidad.h  cambiar_velocidad.cpp  cambiar_velocidad.h  transformacion.cpp
src/server/red/: aceptador.cpp  aceptador.h  cliente.cpp  cliente.h  coordinador_partidas.cpp  coordinador_partidas.h  enviador_eventos.cpp  enviador_eventos.h  escuchador_cliente.cpp  escuchador_cliente.h  handler.h  partida.cpp  partida.h  protocolo.cpp  protocolo.h  recibidor_eventos.cpp  recibidor_eventos.h  retransmisor.cpp  retransmisor.h  sala.cpp  sala.h  sala_de_espera.cpp  sala_de_espera.h  socket.cpp  socket.h  thread.cpp  thread.h
src/servidor/: CMakeLists.txt
src/servidor/sandbox/Testbed/Tests/: Test01demo.h  TestEntries.cpp
src/servidor/server/: server_config.h
src/servidor/server/entidades/: colisionable.cpp  colisionable.h  disparo_portal.cpp  disparo_portal.h  entidad.cpp  entidad.h  identificable.h  jugador.cpp  jugador.h
src/servidor/server/fisicas/: direccion.h  fisicas.cpp  fisicas.h
src/servidor/server/terrenos/: bloque_metal_cuadrado.cpp  bloque_metal_cuadrado.h  bloque_piedra.h  terreno.cpp  terreno.h
src/servidor/test_dp_unique_pointers/: disparo_portal.cpp  disparo_portal.h  entidad.cpp  entidad.h  jugador.cpp  jugador.h  main.cpp  reaccion_visitor.cpp  reaccion_visitor.h  superficie.cpp  superficie.h  superficie_acido.cpp  superficie_acido.h  superficie_metal.cpp  superficie_metal.h  superficie_visitor.cpp  superficie_visitor.h
test/: serverMock.cpp
test-sdl/: CMakeLists.txt  testsdl.cpp
test-sdl/src/: Area.h  SdlTexture.cpp  SdlTexture.h  VistaBloqueMetal.cpp  VistaBloquePiedra.cpp  VistaBloquePiedra.h  VistaBoton.cpp  VistaPuerta.cpp  VistaReceptor.cpp  mainSdlHello.cpp  mainTestTerreno.cpp
